overflow fix

--- a/style.css
+++ b/style.css
@@ -156,7 +156,10 @@ title {
 }
 
 #list {
-    height: auto;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    overflow: auto;
 }
 
 .list-member {
